legend container now anchored to tech-tree container

--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
         #tech-tree {
             width: 100%;
             height: 800px;
+            position: relative;
             border-radius: 14px;
             border: 1.5px solid #293040;
             background: linear-gradient(120deg, #23272c 85%, #223449 100%);
@@ -365,8 +366,8 @@
         }
         #view-legend {
             position: absolute;
-            top: 95px;
-            left: 30px;
+            top: 10px;
+            left: 10px;
             background: rgba(35, 39, 44, 0.8);
             border-radius: 10px;
             padding: 10px;
@@ -595,11 +596,12 @@
     <button id="show-tree-button" style="margin-top: 28px;">Show Tech Tree</button>
 </div>
             </div>
-            <div id="tech-tree"></div>
-            <div id="view-legend" class="hidden">
-                <div class="view-legend-row"><span class="view-legend-bullet physics"></span> Physics</div>
-                <div class="view-legend-row"><span class="view-legend-bullet engineering"></span> Engineering</div>
-                <div class="view-legend-row"><span class="view-legend-bullet society"></span> Society</div>
+            <div id="tech-tree">
+                <div id="view-legend" class="hidden">
+                    <div class="view-legend-row"><span class="view-legend-bullet physics"></span> Physics</div>
+                    <div class="view-legend-row"><span class="view-legend-bullet engineering"></span> Engineering</div>
+                    <div class="view-legend-row"><span class="view-legend-bullet society"></span> Society</div>
+                </div>
             </div>
         </main>
     </div>
