--- a/index.html
+++ b/index.html
@@ -385,6 +385,27 @@
             border-radius: 4px;
             margin-right: 8px;
         }
+        /* Help button in tech-tree (top-right) */
+        #help-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            background: #232b3d;
+            color: #eaf2ff;
+            border: 1px solid #3c80ff88;
+            cursor: pointer;
+            box-shadow: 0 2px 10px #000a;
+            z-index: 101; /* above legend */
+            font-weight: 700;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 18px;
+        }
+        #help-button:hover { background: #3c4b7a; border-color: #3c80ff; }
         #popup-viewport {
             position: fixed;
             top: 0;
@@ -431,6 +452,43 @@
             max-width: 340px;
             box-shadow: 0 2px 12px #0009;
         }
+        /* Help overlay styles */
+        #help-viewport {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.75);
+            z-index: 200;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #help-content {
+            width: min(720px, 92%);
+            background: var(--panel-bg);
+            border-radius: 16px;
+            box-shadow: var(--shadow);
+            padding: 18px 18px 6px 18px;
+            border: 1px solid #3c80ff66;
+        }
+        #help-toolbar {
+            display: flex;
+            justify-content: flex-end;
+            margin-bottom: 6px;
+        }
+        #help-toolbar button {
+            background: #232b3d;
+            color: #eaf2ff;
+            border: 1px solid #3c80ff88;
+            border-radius: 8px;
+            padding: 7px 14px;
+            font-size: 1rem;
+            font-family: var(--font);
+            cursor: pointer;
+        }
+        #help-toolbar button:hover { background: #3c4b7a; border-color: #3c80ff; }
         @media (max-width: 1300px) {
             #main-container { 
                 flex-direction: column; 
@@ -602,6 +660,7 @@
                     <div class="view-legend-row"><span class="view-legend-bullet engineering"></span> Engineering</div>
                     <div class="view-legend-row"><span class="view-legend-bullet society"></span> Society</div>
                 </div>
+                <button id="help-button">?</button>
             </div>
         </main>
     </div>
@@ -613,6 +672,39 @@
                 <button id="popup-close-button">Close</button>
             </div>
             <div id="popup-tech-tree"></div>
+        </div>
+    </div>
+    <!-- Help overlay -->
+    <div id="help-viewport" class="hidden">
+        <div id="help-content">
+            <div id="help-toolbar">
+                <button id="help-close-button">Close</button>
+            </div>
+            <ul style="text-align: left; max-width: 720px; margin: 8px auto 0 auto; font-size: 1.07rem; padding-left: 20px;">
+                <li>
+                    <b>Explore the Tree:</b> Use filters, search, or simply pan and zoom to navigate the entire tech tree.
+                </li>
+                <li>
+                    <b>Branch Inspection:</b> Click any technology to focus on its specific dependency branch. Use the new <b>Back/Forward buttons</b> to navigate your history.
+                </li>
+                <li>
+                    <b>Path Analysis:</b> Right-click a technology to select it as a start point, and right-click another to set an end point. Then, render the direct path or all prerequisites in a focused popup view.
+                </li>
+                <li>
+                    <b>Share Your View:</b> Use the "Copy Link" button to generate a shareable URL that saves your current filters, layout, and even a focused technology or calculated path.
+                </li>
+                <li>
+                    <b>Customizable UI:</b> Choose from multiple layouts (including one with dependency arrows) and drag the control panel anywhere on the screen.
+                </li>
+            </ul>
+            <div style="background: #c8373722; border: 1px solid #c8373788; border-radius: 8px; padding: 13px 16px 11px 16px; margin: 16px auto 0 auto; color: #ffc4c4; font-size: 1rem; max-width: 720px;">
+                <b>Beta / WIP:</b><br>
+                This tool is still in development. Some features may not be fully functional.
+            </div>
+            <div style="background: #222d38dd; border-radius: 8px; padding: 13px 16px 11px 16px; margin: 16px auto; color: #ffe38c; font-size: 1rem; max-width: 720px;">
+                <b>Tip:</b><br>
+                The more general your search or filters, the bigger (and slower) the tech tree becomes. Try to be specific for best results!
+            </div>
         </div>
     </div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
