fixed tier indicator not displaying tier 11 correctly and added tier explanation to glossary

--- a/index.html
+++ b/index.html
@@ -659,6 +659,10 @@
                     <div class="view-legend-row"><span class="view-legend-bullet physics"></span> Physics</div>
                     <div class="view-legend-row"><span class="view-legend-bullet engineering"></span> Engineering</div>
                     <div class="view-legend-row"><span class="view-legend-bullet society"></span> Society</div>
+                    <div class="view-legend-row">
+                        <span class="view-legend-bullet" style="background: repeating-linear-gradient(135deg, #000 0 2px, transparent 2px 6px), #fff; border: 1px solid #000;"></span>
+                        Tier (number of diagonal stripes)
+                    </div>
                 </div>
                 <button id="help-button">?</button>
             </div>
@@ -695,6 +699,9 @@
                 </li>
                 <li>
                     <b>Customizable UI:</b> Choose from multiple layouts (including one with dependency arrows) and drag the control panel anywhere on the screen.
+                </li>
+                <li>
+                    <b>Tier Indicators:</b> Each technology shows a small white wedge on the left with diagonal black stripes. The number of stripes equals the tech's tier (up to T11).
                 </li>
             </ul>
             <div style="background: #c8373722; border: 1px solid #c8373788; border-radius: 8px; padding: 13px 16px 11px 16px; margin: 16px auto 0 auto; color: #ffc4c4; font-size: 1rem; max-width: 720px;">
