--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
             letter-spacing: 2px;
             font-weight: 500;
         }
+        /* Beta/WIP pill in header */
+        .beta-pill {
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            padding: 6px 10px;
+            border-radius: 999px;
+            font-size: 0.95rem;
+            background: #c8373722;
+            border: 1px solid #c8373788;
+            color: #ffc4c4;
+            cursor: pointer;
+            user-select: none;
+        }
+        .beta-pill:hover { background: #c8373740; }
         #main-container {
             display: flex;
             margin: 0;
@@ -271,10 +286,10 @@
             flex-wrap: wrap;
             gap: 12px;
             align-items: center;
-            justify-content: center;
-            padding: 0 32px;
         }
         #tree-toolbar label {
+            display: flex;
+            align-items: center;
             font-size: 1rem;
             margin-right: 2px;
         }
@@ -531,6 +546,7 @@
     <header>
         <div class="header-content">
             <h1>Star Trek: New Horizons Technology Tree</h1>
+            <span id="beta-badge" class="beta-pill" role="button" tabindex="0" title="This tool is under active development. Click for details.">Beta / WIP</span>
         </div>
     </header>
     <div id="main-container">
@@ -639,35 +655,35 @@
             </div>
             <div id="landing-card">
                 <div class="landing-content">
-    <h2>Welcome to the Star Trek: New Horizons Tech Tree!</h2>
-    <p>An interactive tool to explore the technologies of the ST:NH mod.</p>
-    <ul style="text-align: left; max-width: 500px; margin: 18px auto 0 auto; font-size: 1.07rem; padding-left: 20px;">
-        <li>
-            <b>Explore the Tree:</b> Use filters, search, or simply pan and zoom to navigate the entire tech tree.
-        </li>
-        <li>
-            <b>Branch Inspection:</b> Click any technology to focus on its specific dependency branch. Use the new <b>Back/Forward buttons</b> to navigate your history.
-        </li>
-        <li>
-            <b>Path Analysis:</b> Right-click a technology to select it as a start point, and right-click another to set an end point. Then, render the direct path or all prerequisites in a focused popup view.
-        </li>
-        <li>
-            <b>Share Your View:</b> Use the "Copy Link" button to generate a shareable URL that saves your current filters, layout, and even a focused technology or calculated path.
-        </li>
-        <li>
-            <b>Customizable UI:</b> Choose from multiple layouts (including one with dependency arrows) and drag the control panel anywhere on the screen.
-        </li>
-    </ul>
-    <div style="background: #c8373722; border: 1px solid #c8373788; border-radius: 8px; padding: 13px 16px 11px 16px; margin-top: 22px; color: #ffc4c4; font-size: 1rem;">
-        <b>Beta / WIP:</b><br>
-        This tool is still in development. Some features may not be fully functional.
-    </div>
-    <div style="background: #222d38dd; border-radius: 8px; padding: 13px 16px 11px 16px; margin-top: 22px; color: #ffe38c; font-size: 1rem;">
-        <b>Tip:</b><br>
-        The more general your search or filters, the bigger (and slower) the tech tree becomes. Try to be specific for best results!
-    </div>
-    <button id="show-tree-button" style="margin-top: 28px;">Show Tech Tree</button>
-</div>
+                    <h2>Welcome to the Star Trek: New Horizons Tech Tree!</h2>
+                    <p>An interactive tool to explore the technologies of the ST:NH mod.</p>
+                    <ul style="text-align: left; max-width: 500px; margin: 18px auto 0 auto; font-size: 1.07rem; padding-left: 20px;">
+                        <li>
+                            <b>Explore the Tree:</b> Use filters, search, or simply pan and zoom to navigate the entire tech tree.
+                        </li>
+                        <li>
+                            <b>Branch Inspection:</b> Click any technology to focus on its specific dependency branch. Use the new <b>Back/Forward buttons</b> to navigate your history.
+                        </li>
+                        <li>
+                            <b>Path Analysis:</b> Right-click a technology to select it as a start point, and right-click another to set an end point. Then, render the direct path or all prerequisites in a focused popup view.
+                        </li>
+                        <li>
+                            <b>Share Your View:</b> Use the "Copy Link" button to generate a shareable URL that saves your current filters, layout, and even a focused technology or calculated path.
+                        </li>
+                        <li>
+                            <b>Customizable UI:</b> Choose from multiple layouts (including one with dependency arrows) and drag the control panel anywhere on the screen.
+                        </li>
+                    </ul>
+                    <div style="background: #c8373722; border: 1px solid #c8373788; border-radius: 8px; padding: 13px 16px 11px 16px; margin-top: 22px; color: #ffc4c4; font-size: 1rem;">
+                        <b>Beta / WIP:</b><br>
+                        This tool is still in development. Some features may not be fully functional.
+                    </div>
+                    <div style="background: #222d38dd; border-radius: 8px; padding: 13px 16px 11px 16px; margin-top: 22px; color: #ffe38c; font-size: 1rem;">
+                        <b>Tip:</b><br>
+                        The more general your search or filters, the bigger (and slower) the tech tree becomes. Try to be specific for best results!
+                    </div>
+                    <button id="show-tree-button" style="margin-top: 28px;">Show Tech Tree</button>
+                </div>
             </div>
             <div id="tech-tree">
                 <div id="view-legend" class="hidden">
