--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                     <div class="view-legend-row"><span class="view-legend-bullet society"></span> Society</div>
                     <div class="view-legend-row">
                         <span class="view-legend-bullet" style="background: repeating-linear-gradient(45deg, #000 0 2px, transparent 4px 6px), #fff; border: 1px solid #000;"></span>
-                        Tier (number of diagonal stripes)
+                        Tier
                     </div>
                 </div>
                 <button id="help-button">?</button>
