refactor: reorganize codebase into modular components and separate UI logic

--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
                     <b>Share Your View:</b> Use the "Copy Link" button to generate a shareable URL that saves your current filters, layout, and even a focused technology or calculated path.
                 </li>
                 <li>
-                    <b>Customizable UI:</b> Choose from multiple layouts (including one with dependency arrows) and drag the control panel anywhere on the screen.
+                    <b>Customizable UI:</b> Choose from multiple layouts (including one with dependency arrows).
                 </li>
                 <li>
                     <b>Tier Indicators:</b> Each technology shows a small white wedge on the left with diagonal black stripes. The number of stripes equals the tech's tier (up to T11).
@@ -746,6 +746,6 @@
         </div>
     </div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="showcase.js"></script>
-</body>
-</html>
+    <script type="module" src="js/main.js"></script>
+  </body>
+  </html>
