Search All Techs toggle now active at start

--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
                         <div class="search-options">
                             <label for="search-scope-toggle" style="margin: 0;">Search All Techs</label>
                             <label class="switch">
-                                <input type="checkbox" id="search-scope-toggle">
+                                <input type="checkbox" id="search-scope-toggle" checked>
                                 <span class="slider"></span>
                             </label>
                         </div>
