--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ST: New Horizons Tech Tree</title>
+    <link rel="icon" type="image/png" href="assets/PDGIco.png">
     <script>
         (function() {
             try {
@@ -48,6 +49,8 @@
         .header-content img {
             height: 48px;
         }
+        /* Right-aligned header icon */
+        #title-icon { margin-left: auto; height: 36px; }
         .header-content h1 {
             margin: 0;
             font-size: 2.1rem;
@@ -577,6 +580,7 @@
         <div class="header-content">
             <h1>Star Trek: New Horizons Technology Tree</h1>
             <span id="beta-badge" class="beta-pill" role="button" tabindex="0" title="This tool is under active development. Click for details.">Beta / WIP</span>
+            <img id="title-icon" src="assets/PDGIco.png" alt="App Icon">
         </div>
     </header>
     <div id="main-container">
