adding category filter

--- a/index.html
+++ b/index.html
@@ -612,6 +612,10 @@
                             <option value="society">Society</option>
                             <option value="engineering">Engineering</option>
                         </select>
+                        <label for="category-select">Select Category:</label>
+                        <select id="category-select">
+                            <option value="all">All</option>
+                        </select>
                         <label for="start-tier-select" class="filters-divider">Select Tier Range:</label>
                         <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
                             <select id="start-tier-select" style="width: 100%; margin: 0;">
