--- a/index.html
+++ b/index.html
@@ -734,6 +734,11 @@
                         <span class="view-legend-bullet" style="background: repeating-linear-gradient(45deg, #000 0 2px, transparent 4px 6px), #fff; border: 1px solid #000;"></span>
                         Tier
                     </div>
+                    <div class="view-legend-row" style="margin-top: 10px;">
+                        <span style="margin-right: 8px;">Zoom</span>
+                        <button id="zoom-in-button" style="width: 25px; height: 25px; margin-right: 5px;">+</button>
+                        <button id="zoom-out-button" style="width: 25px; height: 25px;">-</button>
+                    </div>
                 </div>
                 <button id="help-button">?</button>
             </div>
