Fix search feature

--- a/index.html
+++ b/index.html
@@ -658,6 +658,13 @@
                                 <span class="slider"></span>
                             </label>
                         </div>
+                        <div class="search-options">
+                            <label for="search-name-only-toggle" style="margin: 0;">Search Name/ID Only</label>
+                            <label class="switch">
+                                <input type="checkbox" id="search-name-only-toggle">
+                                <span class="slider"></span>
+                            </label>
+                        </div>
                         <button id="search-button">Search</button>
                         <button id="search-back-button" style="display: none; margin-top: 8px;">Return to Previous View</button>
                     </div>
