added highlighting to tier view and fix main tree button

--- a/index.html
+++ b/index.html
@@ -409,6 +409,15 @@
         .tech-node rect {
             stroke-width: 4px;
         }
+        .link.path-highlight {
+            stroke: white !important;
+            stroke-width: 3px !important;
+            stroke-opacity: 1 !important;
+        }
+        .tech-node.path-highlight rect {
+            stroke: white !important;
+            stroke-width: 3px !important;
+        }
         .tech-node text {
             fill: #dddddd;
             font-size: 10px;
