google analytics tracker added

--- a/index.html
+++ b/index.html
@@ -583,6 +583,15 @@
             #tree-panel { min-width: unset; }
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DSTCL5MCVL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DSTCL5MCVL');
+    </script>
 </head>
 <body>
     <header>
