--- a/index.html
+++ b/index.html
@@ -627,16 +627,19 @@
                             </label>
                         </div>
 
-                        <label for="species-select" class="filters-divider">Select Empire (Legacy):</label>
-                        <select id="species-select">
-                            <option value="all">All</option>
-                        </select>
-                        <div class="search-options" style="margin-top: 8px; margin-bottom: 8px;">
-                            <label for="species-exclusive-toggle" style="margin: 0;">Exclusive</label>
-                            <label class="switch">
-                                <input type="checkbox" id="species-exclusive-toggle">
-                                <span class="slider"></span>
-                            </label>
+                        <!-- LEGACY: Hidden for now, replaced by faction-select -->
+                        <div style="display: none;">
+                            <label for="species-select" class="filters-divider">Select Empire (Legacy):</label>
+                            <select id="species-select">
+                                <option value="all">All</option>
+                            </select>
+                            <div class="search-options" style="margin-top: 8px; margin-bottom: 8px;">
+                                <label for="species-exclusive-toggle" style="margin: 0;">Exclusive</label>
+                                <label class="switch">
+                                    <input type="checkbox" id="species-exclusive-toggle">
+                                    <span class="slider"></span>
+                                </label>
+                            </div>
                         </div>
                         <label for="area-select" class="filters-divider">Select Research Branch:</label>
                         <select id="area-select">
