feat: Implement Phase 2 & 3 enhancements for faction filtering and component effects
- Renamed species-exclusive toggle to faction-exclusive toggle in showcase.js
- Updated filtering logic to apply faction-exclusive filters based on the new toggle
- Added a comprehensive browser test checklist for Phase 2 & 3 features in BROWSER_TEST_CHECKLIST.md
- Created a test summary document for Phase 3 component effects in PHASE3_TEST_SUMMARY.md
- Introduced a new component parser script to extract component stats from STNH mod
- Added a supplemental tech parser to capture missing techs filtered out by the Balance Center
- Documented missing techs in missing_techs.txt for reference

--- a/index.html
+++ b/index.html
@@ -521,8 +521,29 @@
             font-size: 1rem;
             z-index: 50;
             pointer-events: none;
-            max-width: 340px;
+            max-width: 380px;
             box-shadow: 0 2px 12px #0009;
+        }
+        /* Phase 3: Enhanced Effect Display */
+        .effects-section {
+            margin: 10px 0;
+            padding: 8px;
+            background: rgba(0,0,0,0.2);
+            border-radius: 6px;
+        }
+        .effect-category {
+            margin: 6px 0;
+        }
+        .effect-category-label {
+            font-weight: bold;
+            color: var(--primary);
+            font-size: 0.95rem;
+        }
+        .effect-item {
+            margin-left: 1.2em;
+            font-size: 0.9rem;
+            line-height: 1.6;
+            color: #d6e3f2;
         }
         /* Help overlay styles */
         #help-viewport {
