feat: Complete Phase 1-3 Review and Final Plan Documentation
- Added comprehensive review document (PHASE_1_2_3_REVIEW.md) detailing achievements, limitations, and technical implementations for Phases 1, 2, and 3 of the STNH Techtree project.
- Created final plan document (PLAN_PHASE_1_2_3_FINAL_ABSCHLUSS.md) summarizing all phases, including successful implementation of faction UI, tech effects, and unlock details.
- Introduced new scripts for analyzing tech references (analyze_tech_references.py) and reverse unlock parsing (reverse_unlock_parser.py) to enhance data extraction and mapping capabilities.
- Improved unlock coverage from 39.3% to 73.9% through the implementation of a reverse unlock parser.
- Optimized data size significantly from 21.2MB to 2.9MB through efficient parsing and data aggregation.
- Documented all new and modified files for clarity and future reference.

--- a/index.html
+++ b/index.html
@@ -545,6 +545,31 @@
             line-height: 1.6;
             color: #d6e3f2;
         }
+        /* Unlocks section - similar to effects */
+        .unlocks-section {
+            margin: 10px 0;
+            padding: 8px;
+            background: rgba(0,0,0,0.3);
+            border-radius: 6px;
+            border-left: 3px solid #ffd700;
+        }
+        .unlock-category {
+            margin: 6px 0;
+        }
+        .unlock-category-label {
+            font-weight: bold;
+            color: #ffd700;
+            font-size: 0.95rem;
+            display: block;
+            margin-bottom: 4px;
+        }
+        .unlock-item {
+            margin-left: 1.5em;
+            font-size: 0.9rem;
+            line-height: 1.5;
+            color: #d6e3f2;
+            padding: 2px 0;
+        }
         /* Help overlay styles */
         #help-viewport {
             position: fixed;
