--- a/index.html
+++ b/index.html
@@ -423,6 +423,13 @@
             font-size: 10px;
             text-shadow: 0 0 3px black, 0 0 3px black;
         }
+        .tech-node .node-icon {
+            filter: drop-shadow(2px 2px 3px rgba(0,0,0,0.8));
+        }
+        .tech-node .unlock-type-icon {
+            filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.9));
+            fill: #ffffff;
+        }
         #view-legend {
             position: absolute;
             top: 10px;
