--- a/index.html
+++ b/index.html
@@ -570,6 +570,13 @@
             display: block;
             margin-bottom: 4px;
         }
+        .unlock-type-img {
+            width: 18px;
+            height: 18px;
+            vertical-align: middle;
+            margin-right: 4px;
+            filter: drop-shadow(1px 1px 1px rgba(0,0,0,0.5));
+        }
         .unlock-item {
             margin-left: 1.5em;
             font-size: 0.9rem;
