feat: Add unlock filter functionality and enhance filter highlighting

--- a/index.html
+++ b/index.html
@@ -808,10 +808,14 @@
                         <select id="category-select">
                             <option value="all">All</option>
                         </select>
+                        <label for="unlock-select" style="margin-top: 10px; display: block;">Select Unlock:</label>
+                        <select id="unlock-select">
+                            <option value="all">All</option>
+                        </select>
                         <div class="search-options" style="margin-top: 8px; margin-bottom: 8px;">
-                            <label for="category-highlight-toggle" style="margin: 0;">Highlight Category</label>
+                            <label for="filter-highlight-toggle" style="margin: 0;">Highlight Filters</label>
                             <label class="switch">
-                                <input type="checkbox" id="category-highlight-toggle">
+                                <input type="checkbox" id="filter-highlight-toggle">
                                 <span class="slider"></span>
                             </label>
                         </div>
