feat: Add tooltip toggle functionality to control visibility in tech nodes

--- a/index.html
+++ b/index.html
@@ -1000,6 +1000,13 @@
                         <button id="zoom-in-button" style="width: 25px; height: 25px; margin-right: 5px;">+</button>
                         <button id="zoom-out-button" style="width: 25px; height: 25px;">-</button>
                     </div>
+                    <div class="view-legend-row" style="margin-top: 8px;">
+                        <span style="margin-right: 8px;">Tooltip</span>
+                        <label class="switch" style="transform: scale(0.8);">
+                            <input type="checkbox" id="tooltip-toggle" checked>
+                            <span class="slider"></span>
+                        </label>
+                    </div>
                 </div>
                 <button id="help-button">?</button>
             </div>
